pandaQParser.py
# Generated from pandaQ.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pandaQParser ( Parser ):

    grammarFileName = "pandaQ.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':='", "'*'", "','", "'as'", "'('", 
                     "')'", "'+'", "'-'", "'/'", "'='", "'and'", "'<'", 
                     "<INVALID>", "'select'", "'from'", "'order'", "'by'", 
                     "'where'", "'not'", "'inner'", "'join'", "'on'", "'plot'", 
                     "'in'", "'asc'", "'desc'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Spaces", "SELECT", "FROM", 
                      "ORDER", "BY", "WHERE", "NOT", "INNER", "JOIN", "ON", 
                      "PLOT", "IN", "ASC", "DESC", "ID", "NUM", "DIGIT" ]

    RULE_root = 0
    RULE_plot = 1
    RULE_assignation = 2
    RULE_select = 3
    RULE_columnList = 4
    RULE_column = 5
    RULE_expression = 6
    RULE_innerJoinList = 7
    RULE_innerJoin = 8
    RULE_conditionList = 9
    RULE_condition = 10
    RULE_subQuery = 11
    RULE_orderingList = 12
    RULE_order = 13

    ruleNames =  [ "root", "plot", "assignation", "select", "columnList", 
                   "column", "expression", "innerJoinList", "innerJoin", 
                   "conditionList", "condition", "subQuery", "orderingList", 
                   "order" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    Spaces=14
    SELECT=15
    FROM=16
    ORDER=17
    BY=18
    WHERE=19
    NOT=20
    INNER=21
    JOIN=22
    ON=23
    PLOT=24
    IN=25
    ASC=26
    DESC=27
    ID=28
    NUM=29
    DIGIT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignation(self):
            return self.getTypedRuleContext(pandaQParser.AssignationContext,0)


        def select(self):
            return self.getTypedRuleContext(pandaQParser.SelectContext,0)


        def plot(self):
            return self.getTypedRuleContext(pandaQParser.PlotContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = pandaQParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.assignation()
                self.state = 29
                self.match(pandaQParser.T__0)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.select()
                self.state = 32
                self.match(pandaQParser.T__0)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.plot()
                self.state = 35
                self.match(pandaQParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLOT(self):
            return self.getToken(pandaQParser.PLOT, 0)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_plot

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlot" ):
                return visitor.visitPlot(self)
            else:
                return visitor.visitChildren(self)




    def plot(self):

        localctx = pandaQParser.PlotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_plot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(pandaQParser.PLOT)
            self.state = 40
            self.match(pandaQParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def select(self):
            return self.getTypedRuleContext(pandaQParser.SelectContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_assignation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignation" ):
                return visitor.visitAssignation(self)
            else:
                return visitor.visitChildren(self)




    def assignation(self):

        localctx = pandaQParser.AssignationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(pandaQParser.ID)
            self.state = 43
            self.match(pandaQParser.T__1)
            self.state = 44
            self.select()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(pandaQParser.SELECT, 0)

        def columnList(self):
            return self.getTypedRuleContext(pandaQParser.ColumnListContext,0)


        def FROM(self):
            return self.getToken(pandaQParser.FROM, 0)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def innerJoinList(self):
            return self.getTypedRuleContext(pandaQParser.InnerJoinListContext,0)


        def WHERE(self):
            return self.getToken(pandaQParser.WHERE, 0)

        def conditionList(self):
            return self.getTypedRuleContext(pandaQParser.ConditionListContext,0)


        def subQuery(self):
            return self.getTypedRuleContext(pandaQParser.SubQueryContext,0)


        def ORDER(self):
            return self.getToken(pandaQParser.ORDER, 0)

        def BY(self):
            return self.getToken(pandaQParser.BY, 0)

        def orderingList(self):
            return self.getTypedRuleContext(pandaQParser.OrderingListContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_select

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = pandaQParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(pandaQParser.SELECT)
            self.state = 47
            self.columnList()
            self.state = 48
            self.match(pandaQParser.FROM)
            self.state = 49
            self.match(pandaQParser.ID)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 50
                self.innerJoinList()


            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 53
                self.match(pandaQParser.WHERE)
                self.state = 54
                self.conditionList()


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 57
                self.subQuery()


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 60
                self.match(pandaQParser.ORDER)
                self.state = 61
                self.match(pandaQParser.BY)
                self.state = 62
                self.orderingList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.ColumnContext)
            else:
                return self.getTypedRuleContext(pandaQParser.ColumnContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_columnList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnList" ):
                return visitor.visitColumnList(self)
            else:
                return visitor.visitChildren(self)




    def columnList(self):

        localctx = pandaQParser.ColumnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_columnList)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(pandaQParser.T__2)
                pass
            elif token in [6, 28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.column()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 67
                    self.match(pandaQParser.T__3)
                    self.state = 68
                    self.column()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_column

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn" ):
                return visitor.visitColumn(self)
            else:
                return visitor.visitChildren(self)




    def column(self):

        localctx = pandaQParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_column)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(pandaQParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.expression(0)
                self.state = 78
                self.match(pandaQParser.T__4)
                self.state = 79
                self.match(pandaQParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)

        def NUM(self):
            return self.getToken(pandaQParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class MultContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)

        def NUM(self):
            return self.getToken(pandaQParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMult" ):
                return visitor.visitMult(self)
            else:
                return visitor.visitChildren(self)


    class SubstContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)

        def NUM(self):
            return self.getToken(pandaQParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubst" ):
                return visitor.visitSubst(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)

        def NUM(self):
            return self.getToken(pandaQParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = pandaQParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = pandaQParser.IdentifierContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 84
                self.match(pandaQParser.ID)
                pass

            elif la_ == 2:
                localctx = pandaQParser.MultContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 85
                self.match(pandaQParser.T__5)
                self.state = 86
                self.expression(0)
                self.state = 87
                self.match(pandaQParser.T__6)
                self.state = 88
                self.match(pandaQParser.T__2)
                self.state = 89
                self.match(pandaQParser.NUM)
                pass

            elif la_ == 3:
                localctx = pandaQParser.SumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 91
                self.match(pandaQParser.T__5)
                self.state = 92
                self.expression(0)
                self.state = 93
                self.match(pandaQParser.T__6)
                self.state = 94
                self.match(pandaQParser.T__7)
                self.state = 95
                self.match(pandaQParser.NUM)
                pass

            elif la_ == 4:
                localctx = pandaQParser.SubstContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 97
                self.match(pandaQParser.T__5)
                self.state = 98
                self.expression(0)
                self.state = 99
                self.match(pandaQParser.T__6)
                self.state = 100
                self.match(pandaQParser.T__8)
                self.state = 101
                self.match(pandaQParser.NUM)
                pass

            elif la_ == 5:
                localctx = pandaQParser.DivContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(pandaQParser.T__5)
                self.state = 104
                self.expression(0)
                self.state = 105
                self.match(pandaQParser.T__6)
                self.state = 106
                self.match(pandaQParser.T__9)
                self.state = 107
                self.match(pandaQParser.NUM)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 123
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = pandaQParser.MultContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 111
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 112
                        self.match(pandaQParser.T__2)
                        self.state = 113
                        self.match(pandaQParser.NUM)
                        pass

                    elif la_ == 2:
                        localctx = pandaQParser.SumContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 114
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 115
                        self.match(pandaQParser.T__7)
                        self.state = 116
                        self.match(pandaQParser.NUM)
                        pass

                    elif la_ == 3:
                        localctx = pandaQParser.SubstContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 117
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 118
                        self.match(pandaQParser.T__8)
                        self.state = 119
                        self.match(pandaQParser.NUM)
                        pass

                    elif la_ == 4:
                        localctx = pandaQParser.DivContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 120
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 121
                        self.match(pandaQParser.T__9)
                        self.state = 122
                        self.match(pandaQParser.NUM)
                        pass

             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class InnerJoinListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def innerJoin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.InnerJoinContext)
            else:
                return self.getTypedRuleContext(pandaQParser.InnerJoinContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_innerJoinList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerJoinList" ):
                return visitor.visitInnerJoinList(self)
            else:
                return visitor.visitChildren(self)




    def innerJoinList(self):

        localctx = pandaQParser.InnerJoinListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_innerJoinList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.innerJoin()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 129
                self.innerJoin()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerJoinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INNER(self):
            return self.getToken(pandaQParser.INNER, 0)

        def JOIN(self):
            return self.getToken(pandaQParser.JOIN, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)

        def ON(self):
            return self.getToken(pandaQParser.ON, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_innerJoin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerJoin" ):
                return visitor.visitInnerJoin(self)
            else:
                return visitor.visitChildren(self)




    def innerJoin(self):

        localctx = pandaQParser.InnerJoinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_innerJoin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(pandaQParser.INNER)
            self.state = 136
            self.match(pandaQParser.JOIN)
            self.state = 137
            self.match(pandaQParser.ID)
            self.state = 138
            self.match(pandaQParser.ON)
            self.state = 139
            self.match(pandaQParser.ID)
            self.state = 140
            self.match(pandaQParser.T__10)
            self.state = 141
            self.match(pandaQParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.ConditionContext)
            else:
                return self.getTypedRuleContext(pandaQParser.ConditionContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_conditionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionList" ):
                return visitor.visitConditionList(self)
            else:
                return visitor.visitChildren(self)




    def conditionList(self):

        localctx = pandaQParser.ConditionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.condition()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 144
                self.match(pandaQParser.T__11)
                self.state = 145
                self.condition()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqualsContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquals" ):
                return visitor.visitEquals(self)
            else:
                return visitor.visitChildren(self)


    class MinorContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinor" ):
                return visitor.visitMinor(self)
            else:
                return visitor.visitChildren(self)


    class NotMinorContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(pandaQParser.NOT, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotMinor" ):
                return visitor.visitNotMinor(self)
            else:
                return visitor.visitChildren(self)


    class NotEqualsContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(pandaQParser.NOT, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotEquals" ):
                return visitor.visitNotEquals(self)
            else:
                return visitor.visitChildren(self)



    def condition(self):

        localctx = pandaQParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = pandaQParser.EqualsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(pandaQParser.ID)
                self.state = 152
                self.match(pandaQParser.T__10)
                self.state = 153
                self.match(pandaQParser.ID)
                pass

            elif la_ == 2:
                localctx = pandaQParser.MinorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(pandaQParser.ID)
                self.state = 155
                self.match(pandaQParser.T__12)
                self.state = 156
                self.match(pandaQParser.ID)
                pass

            elif la_ == 3:
                localctx = pandaQParser.NotEqualsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(pandaQParser.NOT)
                self.state = 158
                self.match(pandaQParser.ID)
                self.state = 159
                self.match(pandaQParser.T__10)
                self.state = 160
                self.match(pandaQParser.ID)
                pass

            elif la_ == 4:
                localctx = pandaQParser.NotMinorContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.match(pandaQParser.NOT)
                self.state = 162
                self.match(pandaQParser.ID)
                self.state = 163
                self.match(pandaQParser.T__12)
                self.state = 164
                self.match(pandaQParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(pandaQParser.WHERE, 0)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def IN(self):
            return self.getToken(pandaQParser.IN, 0)

        def select(self):
            return self.getTypedRuleContext(pandaQParser.SelectContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_subQuery

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubQuery" ):
                return visitor.visitSubQuery(self)
            else:
                return visitor.visitChildren(self)




    def subQuery(self):

        localctx = pandaQParser.SubQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_subQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(pandaQParser.WHERE)
            self.state = 168
            self.match(pandaQParser.ID)
            self.state = 169
            self.match(pandaQParser.IN)
            self.state = 170
            self.match(pandaQParser.T__5)
            self.state = 171
            self.select()
            self.state = 172
            self.match(pandaQParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderingListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def order(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OrderContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OrderContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_orderingList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderingList" ):
                return visitor.visitOrderingList(self)
            else:
                return visitor.visitChildren(self)




    def orderingList(self):
